@startuml

title __COMMANDS's Class Diagram__\n

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        class io.github.johnytech6.dm.commands.DmCommand {
            - subcommands : ArrayList<SubCommand>
            + DmCommand()
            + onCommand()
            + onTabComplete()
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        class io.github.johnytech6.dm.commands.GetPlayerPosition {
            + onCommand()
            + onTabComplete()
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        class io.github.johnytech6.dm.commands.StatJohnytech {
            + StatJohnytech()
            + onCommand()
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        abstract class io.github.johnytech6.dm.commands.SubCommand {
            {abstract} + getDescription()
            {abstract} + getName()
            {abstract} + getSubcommandArguments()
            {abstract} + getSyntax()
            {abstract} + perform()
            # isDouble()
        }
      }
    }
  }
  

  io.github.johnytech6.dm.commands.DmCommand .up.|> org.bukkit.command.TabExecutor
  io.github.johnytech6.dm.commands.DmCommand o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.DmCommand o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.dm.commands.GetPlayerPosition .up.|> org.bukkit.command.TabExecutor
  io.github.johnytech6.dm.commands.StatJohnytech .up.|> org.bukkit.command.CommandExecutor
  io.github.johnytech6.dm.commands.StatJohnytech o-- io.github.johnytech6.Handler.PluginHandler : ph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
